--- a/client/modules/core/components/layout/layout.scss
+++ b/client/modules/core/components/layout/layout.scss
@@ -17,7 +17,6 @@
 .content {
   display: flex;
   position: relative;
-  overflow: scroll;
   min-height: 100vh;
 }
 
